feat(class.validator): added request validator with custom message
