# src/api/assesment/assesment.routes.ts
@@ -1,8 +1,0 @@
-import express from 'express';
-import doReassess from './assesment.controller';
-
-const router = express.Router();
-
-router.get('/assesments', doReassess);
-
-export default router;
