# src/interfaces/api/dto/Checkout.ts
@@ -1,0 +1,7 @@
+import Stdout from './Stdout';
+
+export default class Checkout {
+  type: String;
+
+  stdout: Stdout;
+}
